--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@tailwindcss/forms": "^0.3.4",
     "better-react-spinkit": "^2.0.4",
     "faker": "^5.5.3",
-    "next": "latest",
+    "next": "^12.1.0",
     "next-auth": "4.0.0-beta.5",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
